# ezC

./: CMakeLists.txt  LICENSE  README.md
include/ezC/util/: arena.h  iterator.h  linked_list.h  list_iterator.h  types.h  vector.h
src/: CMakeLists.txt  arena.c  iterator.c  linked_list.c  list_iterator.c  vector.c
tests/: CMakeLists.txt  test_vector.c
